--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "drupal-module",
     "require": {
         "http-interop/http-factory-guzzle": "^1.2",
-        "open-telemetry/opentelemetry": "^0.0.11",
+        "open-telemetry/opentelemetry": "0.0.11",
         "php-http/guzzle6-adapter": "^2.0"
     },
     "authors": [
